Resolve schema issue and create daily demand time series

--- a/notebooks/01_data_exploration.ipynb
+++ b/notebooks/01_data_exploration.ipynb
@@ -640,6 +640,180 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "b31eb4c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Date', 'Store ID', 'Product ID', 'Category', 'Region',\n",
+       "       'Inventory Level', 'Units Sold', 'Units Ordered', 'Demand Forecast',\n",
+       "       'Price', 'Discount', 'Weather Condition', 'Holiday/Promotion',\n",
+       "       'Competitor Pricing', 'Seasonality'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "5e90a700",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['date', 'store_id', 'product_id', 'category', 'region', 'inventory_level', 'units_sold', 'units_ordered', 'demand_forecast', 'price', 'discount', 'weather_condition', 'holiday_promotion', 'competitor_pricing', 'seasonality']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.columns.tolist())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "0b4302eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['date', 'store_id', 'product_id', 'category', 'region', 'inventory_level', 'units_sold', 'units_ordered', 'demand_forecast', 'price', 'discount', 'weather_condition', 'holiday_promotion', 'competitor_pricing', 'seasonality']\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.columns = df.columns.str.strip()\n",
+    "print(df.columns.tolist())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "157add82",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['date', 'store_id', 'product_id', 'category', 'region',\n",
+       "       'inventory_level', 'units_sold', 'units_ordered', 'demand_forecast',\n",
+       "       'price', 'discount', 'weather_condition', 'holiday_promotion',\n",
+       "       'competitor_pricing', 'seasonality'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[c for c in df.columns if \"date\" in c.lower()]\n",
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94a0088e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>units_sold</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>14484</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022-01-02</td>\n",
+       "      <td>13415</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-01-03</td>\n",
+       "      <td>13681</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-01-04</td>\n",
+       "      <td>14084</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022-01-05</td>\n",
+       "      <td>12572</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        date  units_sold\n",
+       "0 2022-01-01       14484\n",
+       "1 2022-01-02       13415\n",
+       "2 2022-01-03       13681\n",
+       "3 2022-01-04       14084\n",
+       "4 2022-01-05       12572"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "daily_demand = (\n",
+    "    df.groupby('date')['units_sold']\n",
+    "      .sum()\n",
+    "      .reset_index()\n",
+    "      .sort_values('date')\n",
+    ")\n",
+    "\n",
+    "daily_demand.head() # Display the first few rows of daily_demand\n"
+   ]
   }
  ],
  "metadata": {
